--- a/views/expireToken.ejs
+++ b/views/expireToken.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <h3>your token has expired please login again</h3><br><br><br><br>
-    <a href="http://localhost:3000/auth/google"> click here to login again</a>
+    <a href="https://google-auth-library.onrender.com/auth/google"> click here to login again</a>
 </body>
 
 </html>
