--- a/views/deleteMessage.ejs
+++ b/views/deleteMessage.ejs
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>token expired</title>
+    <title>Drive</title>
 </head>
 
 <body>
-    <h3>your token has expired please login again</h3><br><br><br><br>
-    <a href="http://google-auth-library.onrender.com/auth/google"> click here to login again</a>
+    <h2>your file <%=data.originalname%> is deleted succesfully</h2>
+
 </body>
 
 </html>
