--- a/views/alreadyDelete.ejs
+++ b/views/alreadyDelete.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>token expired</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <h3>your token has expired please login again</h3><br><br><br><br>
-    <a href="http://localhost:3000/auth/google"> click here to login again</a>
+    <h2>your file <%=data%>  is already deleted please refresh page to get updated data</h2>
 </body>
-
 </html>
